fix: close menu after click and fix alignments

--- a/src/assets/layout/sass/_topbar.scss
+++ b/src/assets/layout/sass/_topbar.scss
@@ -154,9 +154,19 @@
     overflow: hidden;
 
 }
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 1rem;
+
+}
+
 .menu a{
     display: block;
     color: $topbarItemColor;
+    font-weight: bold;
 }
 .menu a:hover{
     background-color: $topbarItemHoverColor;
@@ -164,9 +174,11 @@
 
 
 .menu li {
-    margin-left: 1rem;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
     color: $topbarItemColor;
+    display: flex;
+    justify-content: center;
 }
 
 .nav{
@@ -179,7 +191,6 @@
 .hamb{
     cursor: pointer;
     float: right;
-    //padding: 40px 20px;
     margin: 20px;
 }/* Style label tag */
 
@@ -256,8 +267,22 @@ width: 24px;
         width: fit-content;
         background: none;
     }
+
+    .menu {
+        flex-direction: row;
+        align-items: center;
+        height: 100%;
+        margin-top: 0px;
+        padding-right: 1rem;
+        padding-left: 1rem;
+    }
+
     .menu li{
+        display: block;
         float: left;
+        margin-right: 1rem;
+        margin-top: 0px;
+        margin-bottom: 0px;
     }
     .menu a:hover{
         background-color: transparent;
